navbar target positioning corrected and unwanted whitespace removed

--- a/styles.css
+++ b/styles.css
@@ -20,15 +20,15 @@ nav {
     margin-left: 60%;
     list-style: none;
 }
-/*
-#navbar::before {
+
+h1::before {
     display: block; 
     content: " "; 
     margin-top: -50px; 
     height: 50px; 
     visibility: hidden; 
     pointer-events: none;
-}*/
+}
 
 li a{
     text-decoration: none;
@@ -38,14 +38,22 @@ div {
     width: 100%;
     margin-left: 0px;
     margin-right: 0px;
-
 }
 
+
+
 #welcome-section {
-    display: block;
-    position: relative;
     margin-top: 50px;
     background-color: goldenrod;
-    width: 100%;
     height: 1030px;
+}
+
+#projects {
+    background-color: aquamarine;
+    height: 1030px;
+}
+
+#contact {
+    background-color: coral;
+    height: 200px;
 }
